# LHCbAnalysis

./: .gitignore  CMakeLists.txt  README.md
Bc2BsPi/: CMakeLists.txt
Bc2BsPi/include/: PreSelPlotter.h  PreSelection.h  Trigger.h  TruthMatching.h  Variables_Analysis.h  Variables_PreSel.h
Bc2BsPi/main/: Bc2BsPi_Analysis.cpp  Bc2BsPi_PreSel.cpp
Bc2BsPi/scripts/: FitTest.C  data_branchdump.h  mc_branchdump.h
Bc2BsPi/src/: PreSelPlotter.cc  PreSelection.cc  Trigger.cc  TruthMatching.cc  Variables_Analysis.cc  Variables_PreSel.cc
Bc2Dmunu/: CMakeLists.txt  run_notes.sh
Bc2Dmunu/BDTDataLoader/weights/: BDTFactory_2012_BDT_0.class.C  BDTFactory_2012_BDT_0.weights.xml
Bc2Dmunu/BuRejectionBDTDataLoader/weights/: BuRejectionBDTFactory_Run1_BDT_0.class.C  BuRejectionBDTFactory_Run1_BDT_0.weights.xml  BuRejectionBDTFactory_Run1_BDT_1.class.C  BuRejectionBDTFactory_Run1_BDT_1.weights.xml
Bc2Dmunu/CombRejectionBDTDataLoader/weights/: CombRejectionBDTFactory_Run1_BDT_0.weights.xml  CombRejectionBDTFactory_Run1_BDT_1.weights.xml
Bc2Dmunu/include/: AnalysisPlotter.h  BasicFitter.h  BuRejectionBDT.h  CombRejectionBDT.h  ComparisonPlotter.h  DataCompPlotter.h  Plotter.h  Selection.h  SkimmingPlotter.h  TighterSelection.h  Trigger.h  TruthMatching.h  Variables_Analysis.h  Variables_Skimming.h
Bc2Dmunu/main/: Bc2Dmunu_Analysis.cpp  Bc2Dmunu_AnalysisDoubleSel.cpp  Bc2Dmunu_BDTTrain.cpp  Bc2Dmunu_Check.cpp  Bc2Dmunu_CombTrain.cpp  Bc2Dmunu_MassFit.cpp  Bc2Dmunu_Skimming.cpp  Bc2Dmunu_SkimmingPlotter.cpp  Bc2Dmunu_Toys.cpp
Bc2Dmunu/scripts/: StreamlineTreeForFitting.C  compareShapes.C  feyn_diags.py  fom.C  lhcbStyle.C  loadAnalysisTree.C  plotData.C  quickDSet.C
Bc2Dmunu/src/: AnalysisPlotter.cc  BasicFitter.cc  BuRejectionBDT.cc  CombRejectionBDT.cc  ComparisonPlotter.cc  DataCompPlotter.cc  Plotter.cc  Selection.cc  SkimmingPlotter.cc  TighterSelection.cc  Trigger.cc  TruthMatching.cc  Variables_Analysis.cc  Variables_Skimming.cc
Bc2Dmunu/weights/: BDTFactory_2012_BDT_1.class.C  BDTFactory_2012_BDT_1.weights.xml
Bs2KstKst/: CMakeLists.txt  myPalette.C  run_instructions.sh  run_systematics.sh
Bs2KstKst/include/: AddAngles.h  AddMassVars.h  AddPIDVarsAndDatasets.h  AddSWeights.h  ApplyBDTAndPIDCuts.h  ApplyBDTPIDAndMassCuts.h  BDTForPID.h  BDTNoPID.h  CutOnBDT.h  CutOnBDTAndPID.h  CutOnBDTPIDAndMass.h  CutOnMass.h  CutOnPID.h  InvariantMassFit.h  MassFitPlotter.h  MassVariablesPlotter.h  MultiDimCutOpt.h  PIDVariablesPlotter.h  PreSelection.h  RunCutOptimisation.h  SimultaneousMassFit.h  TightSelection.h  TightSelectionPlotter.h  Trigger.h  TruthMatching.h  Variables_Analysis.h  Variables_PreSel.h
Bs2KstKst/main/: Bs2KstKst_AddSWeightsToTree.cpp  Bs2KstKst_Analysis.cpp  Bs2KstKst_AnalysisWithCuts.cpp  Bs2KstKst_BDTAndPIDCutOptimisation.cpp  Bs2KstKst_BDTAndPIDCuts.cpp  Bs2KstKst_BDTTraining.cpp  Bs2KstKst_BDTTrainingPlotOnly.cpp  Bs2KstKst_CocktailMCFit.cpp  Bs2KstKst_InvariantMassFit.cpp  Bs2KstKst_MakeDataSets.cpp  Bs2KstKst_MassFitPaperPlot.cpp  Bs2KstKst_MassVetoStudy.cpp  Bs2KstKst_MultiDimCutOpt.cpp  Bs2KstKst_PIDBDTTraining.cpp  Bs2KstKst_PIDCutStudy.cpp  Bs2KstKst_PreSel.cpp  Bs2KstKst_PrepareWorkspace.cpp  Bs2KstKst_RunFit.cpp  Bs2KstKst_SimultaneousMassFit.cpp  Bs2KstKst_StandaloneMassFit.cpp  Bs2KstKst_Test.cpp  Bs2KstKst_TightSelection.cpp  Bs2KstKst_ToyStudies.cpp
Bs2KstKst/scripts/: compL0TriggerMass.py  compSWeightsToBDTVars.py  greigPlots.py  makeDalitzPlots.py  makeLbPlots.py  mergeSystematicTrees.py  plotBDTComp.py  plotMassOfMultCands.py  plotMasses.py  plotPhi.py  plotSystematics.py  plot_angles.py  plot_asym.py  sWeightTest.py  test.py  testPySWeights.py
Bs2KstKst/src/: AddAngles.cc  AddMassVars.cc  AddPIDVarsAndDatasets.cc  AddSWeights.cc  ApplyBDTAndPIDCuts.cc  ApplyBDTPIDAndMassCuts.cc  BDTForPID.cc  BDTNoPID.cc  CutOnBDT.cc  CutOnBDTAndPID.cc  CutOnBDTPIDAndMass.cc  CutOnMass.cc  CutOnPID.cc  InvariantMassFit.cc  MassFitPlotter.cc  MassVariablesPlotter.cc  MultiDimCutOpt.cc  PIDVariablesPlotter.cc  PreSelection.cc  RunCutOptimisation.cc  SimultaneousMassFit.cc  TightSelection.cc  TightSelectionPlotter.cc  Trigger.cc  TruthMatching.cc  Variables_Analysis.cc  Variables_PreSel.cc
Bs2KstKst/weights/: BDTForPIDFactory_2011_BDT_1.class.C  BDTForPIDFactory_2011_BDT_1.weights.xml  BDTForPIDFactory_2012_BDT_0.class.C  BDTForPIDFactory_2012_BDT_0.weights.xml  BDTForPIDFactory_2012_BDT_1.class.C  BDTNoPIDFactory_2011_BDT_0.class.C  BDTNoPIDFactory_2011_BDT_0.weights.xml  BDTNoPIDFactory_2011_BDT_1.class.C  BDTNoPIDFactory_2011_BDT_1.weights.xml  BDTNoPIDFactory_2011_BDT_2.class.C  BDTNoPIDFactory_2011_BDT_2.weights.xml  BDTNoPIDFactory_2011_BDT_3.class.C  BDTNoPIDFactory_2011_BDT_3.weights.xml  BDTNoPIDFactory_2012_BDT_0.class.C  BDTNoPIDFactory_2012_BDT_0.weights.xml  BDTNoPIDFactory_2012_BDT_1.class.C  BDTNoPIDFactory_2012_BDT_1.weights.xml  BDTNoPIDFactory_2012_BDT_2.class.C  BDTNoPIDFactory_2012_BDT_2.weights.xml  BDTNoPIDFactory_2012_BDT_3.class.C  BDTNoPIDFactory_2012_BDT_3.weights.xml
Dst2D0pi/: CMakeLists.txt
Dst2D0pi/include/: LifetimeFitter.h  OrganiseVariables.h  Plotter.h  PreSelection.h  Selection.h  StandAloneFitter.h  StandAlonePlotter.h  Trigger.h  Variables_Analysis.h
Dst2D0pi/main/: Dst2D0pi_Analysis.cpp  Dst2D0pi_LifetimeFitter.cpp  Dst2D0pi_NewFitter.cpp  Dst2D0pi_StandAloneFitter.cpp
Dst2D0pi/scripts/: fit_D_TAU.py  fit_ltime.py  fit_ltime_turbo.py  split_up_data_jobs.py
Dst2D0pi/src/: LifetimeFitter.cc  OrganiseVariables.cc  Plotter.cc  PreSelection.cc  Selection.cc  StandAloneFitter.cc  StandAlonePlotter.cc  Trigger.cc  Variables_Analysis.cc
cmake/: Boost.cmake  BoostConfig.cmake  analyses.cmake
core/include/: Analyser.h  Config.h  CreateBatchJob.h  EventCounter.h  FitEngine.h  FitOptParser.h  FitterBase.h  FitterUtils.h  InputFileOptions.h  OptParser.h  PlotterBase.h  PlotterUtils.h  RunEngine.h  TMVAWrapperBase.h  Utils.h  Variables.h
doc/: Doxyfile.in
scripts/: checkBatchJobs.py  dumpBranches.py  getLumi.py  lhcbStyle.C  makeVariables.py  make_html.py  plotEfficiencies.py  setup_cam.sh  setup_lxplus.sh
(+45 files in other folders)
